got rid of the crap. reference-based checking for new threads instead of time-based